<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/banner"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <Button
                android:id="@+id/btnICT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:text="@string/faculty_of_computing_ict"
                android:textAlignment="center"
                android:textColor="#FFF"
                app:layout_constraintBottom_toTopOf="@+id/btnFreshman"
                app:layout_constraintEnd_toStartOf="@+id/btnBusiness"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnBusiness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:text="@string/faculty_of_business_public_administration"
                android:textAlignment="center"
                android:textColor="#FFF"
                app:layout_constraintBottom_toTopOf="@+id/btnEducation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnICT"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnFreshman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:text="@string/freshman_department"
                android:textAlignment="center"
                android:textColor="#FFF"
                app:layout_constraintBottom_toTopOf="@+id/btnEconomics"
                app:layout_constraintEnd_toStartOf="@+id/btnEducation"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnICT" />

            <Button
                android:id="@+id/btnEducation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:text="@string/faculty_of_education"
                android:textAlignment="center"
                android:textColor="#FFF"
                app:layout_constraintBottom_toTopOf="@+id/btnEngineering"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnFreshman"
                app:layout_constraintTop_toBottomOf="@+id/btnBusiness" />

            <Button
                android:id="@+id/btnEconomics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:text="@string/faculty_of_economics_political_science"
                android:textAlignment="center"
                android:textColor="#FFF"
                app:layout_constraintBottom_toTopOf="@+id/btnPostGraduate"
                app:layout_constraintEnd_toStartOf="@+id/btnEngineering"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnFreshman" />

            <Button
                android:id="@+id/btnEngineering"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:text="@string/faculty_of_engineering"
                android:textAlignment="center"
                android:textColor="#FFF"
                app:layout_constraintBottom_toTopOf="@+id/btnLaw"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnEconomics"
                app:layout_constraintTop_toBottomOf="@+id/btnEducation" />

            <Button
                android:id="@+id/btnPostGraduate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:text="@string/school_of_post_graduate"
                android:textAlignment="center"
                android:textColor="#FFF"
                app:layout_constraintBottom_toTopOf="@+id/btnPublichealth"
                app:layout_constraintEnd_toStartOf="@+id/btnLaw"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnEconomics" />

            <Button
                android:id="@+id/btnLaw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:text="@string/faculty_of_sharia_law"
                android:textAlignment="center"
                android:textColor="#FFF"
                app:layout_constraintBottom_toTopOf="@+id/btnDentist"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnPostGraduate"
                app:layout_constraintTop_toBottomOf="@+id/btnEngineering" />

            <Button
                android:id="@+id/btnPublichealth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:text="@string/school_of_public_health"
                android:textAlignment="center"
                android:textColor="#FFF"
                app:layout_constraintBottom_toTopOf="@+id/btnAgriculture"
                app:layout_constraintEnd_toStartOf="@+id/btnDentist"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnPostGraduate" />

            <Button
                android:id="@+id/btnDentist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:text="@string/school_of_dentistry"
                android:textAlignment="center"
                android:textColor="#FFF"
                app:layout_constraintBottom_toTopOf="@+id/btnNursing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnPublichealth"
                app:layout_constraintTop_toBottomOf="@+id/btnLaw" />

            <Button
                android:id="@+id/btnAgriculture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:text="@string/faculty_of_agriculture"
                android:textAlignment="center"
                android:textColor="#FFF"
                app:layout_constraintBottom_toTopOf="@+id/btnPharmacy"
                app:layout_constraintEnd_toStartOf="@+id/btnNursing"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnPublichealth" />

            <Button
                android:id="@+id/btnNursing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:text="@string/school_of_nursing"
                android:textAlignment="center"
                android:textColor="#FFF"
                app:layout_constraintBottom_toTopOf="@+id/btnLab"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnAgriculture"
                app:layout_constraintTop_toBottomOf="@+id/btnDentist" />

            <Button
                android:id="@+id/btnPharmacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:text="@string/school_of_pharmacy"
                android:textAlignment="center"
                android:textColor="#FFF"
                app:layout_constraintBottom_toTopOf="@+id/btnMedicine"
                app:layout_constraintEnd_toStartOf="@+id/btnLab"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAgriculture" />

            <Button
                android:id="@+id/btnLab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:text="@string/school_of_laboratory_technology"
                android:textAlignment="center"
                android:textColor="#FFF"
                app:layout_constraintBottom_toTopOf="@+id/btnMedicine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnPharmacy"
                app:layout_constraintTop_toBottomOf="@+id/btnNursing" />

            <Button
                android:id="@+id/btnMedicine"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:text="@string/school_of_medicine"
                android:textColor="#FFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLab" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>